--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,20 @@
+* {
+  -ms-overflow-style: none;
+}
+::-webkit-scrollbar {
+  display: none;
+}
+html,
+body {
+  max-height: 100%;
+}
 .App {
   text-align: center;
 }
 .parentImage {
   position: relative;
   margin-top: 20px;
-  height: 72px;
+  height: 60px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
 }
 
